# valkey-module-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  init-project.py  runtest.sh
.github/workflows/: ci.yaml
src/: Makefile  module.c
tests/flow/: test_example.py
tests/unit/: main.py  requirements.txt
